listagem de pacientes para o tecnico

--- a/ubs/medical_query/templates/forwarding/await_querys.html
+++ b/ubs/medical_query/templates/forwarding/await_querys.html
@@ -57,7 +57,7 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
-                        <strong class="card-title">Pacientes a serem atendidos</strong>
+                        <strong class="card-title">Pacientes do dia</strong>
                         <form action="" method="get" class="float-right">
                             <div class="col-10" >
                                 <input name="search_box" type="text" class="form-control" placeholder="Procurar na página">
