--- a/ubs/medical_query/templates/querys/add.html
+++ b/ubs/medical_query/templates/querys/add.html
@@ -31,7 +31,7 @@
                                             {% endfor%}
                                         </div>
                                     {%else%}
-                                            {% if field.name != 'cid10' and field.name != 'examRequest' %}
+                                            {% if field.name != 'cid10' and field.name != 'examRequest' and field.name != 'gestational_history' and field.name != 'repoductive_health'%}
 
                                                 <div
                                                     class="col-md-{% if field.name in 'summary\review_of_systems\main_complaint\current_health_history\type_query' %}12
@@ -83,9 +83,6 @@
 
 
 
-
-
-
                         <div id="3" class="d-none">
                             {% for field in form %}
                             {% if field.errors %}
@@ -99,8 +96,8 @@
                                 {% endfor%}
                             </div>
                             {%else%}
-                            {% if field.name == 'cid10' or field.name == 'examRequest' %}
-  
+                            {% if field.name == 'gestational_history' or field.name == 'repoductive_health' %}
+                        
                             <div class="col-md-12 margin-bottom-15">
                         
                                 <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
@@ -115,7 +112,35 @@
 
 
 
-                            <div id="4" class="d-none">
+                    <div id="4" class="d-none">
+                        {% for field in form %}
+                        {% if field.errors %}
+                        <div
+                            class="col-md-{% if field.name in 'name' %}8{% elif field.name in 'main_complaint\email' %}6{% elif field.name in 'username\sex\birth_date\marital_status\phone\cpf\rg\matricula' %}4{% elif field.name in 'nome_mae\nome_pai' %}6{% else %}12{% endif %} margin-bottom-15 has-error has-feedback">
+                            <label class="control-label">{{ field.label }}</label>
+                            {{ field|add_class:"form-control input-md" }}
+                            <span class="text-danger"> <strong>{{ field.help_text }}</strong> </span>
+                            {% for error in field.errors%}
+                            <span class="help-inline error">{{ error}}</span>
+                            {% endfor%}
+                        </div>
+                        {%else%}
+                        {% if field.name == 'cid10' or field.name == 'examRequest' %}
+
+                        <div class="col-md-12 margin-bottom-15">
+
+                            <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
+                            {{ field|add_class:"form-control input-md" }}
+                            <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+                        </div>
+                        {% endif %}
+                        {%endif%}
+                        {% endfor %}
+                    </div>
+
+
+
+                            <div id="5" class="d-none">
                                 
                                 <div class="card">
                                     <div class="card-body" >
@@ -200,7 +225,7 @@
         document.getElementById(current).className= ""
         document.getElementById('back').className= "btn btn-danger"
         
-        if(current == 4){
+        if(current == 5){
             document.getElementById('finished').className="btn btn-success"
             document.getElementById('next').className="d-none"
         }
