--- a/ubs/medical_query/templates/querys/history.html
+++ b/ubs/medical_query/templates/querys/history.html
@@ -33,6 +33,13 @@
                                 </div>
                             </form>
                         </div>
+                        
+                        <div  class="col-md-6 row">
+                            <label class="bg-primary" style="width: 15px; height: 15px; margin-left: 10px; margin-top: 4px;;"></label><label> Visualizar</label>
+                            <label class="bg-success" style="width: 15px; height: 15px; margin-left: 10px; margin-top: 4px;;"></label><label> Receita</label>
+                            <label class="bg-warning" style="width: 15px; height: 15px; margin-left: 10px; margin-top: 4px;;"></label><label> Requisição de Exames</label>
+                        </div>
+
                         <div class="card-body">
                             <table class="table table-striped table-bordered">
                                 <thead>
@@ -40,7 +47,7 @@
                                         <th>#Código</th>
                                         <th>Paciente</th>
                                         <th>Data da Consulta</th>
-                                        <th width="5%">Ações</th>
+                                        <th >Ações</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -52,8 +59,7 @@
                                                 <td> {{ object.created_on }} </td>
                                     
                                                 <td class="text-center">
-                                                    
-                                                    <a href="{% url 'medical_query:detail_query' object.id %}">
+                                                    <a title="visualizar" href="{% url 'medical_query:detail_query' object.id %}">
                                                         <button 
                                                             type="button" 
                                                             class="btn btn-primary btn-sm"
@@ -62,6 +68,22 @@
                                                         </button> 
                                                     </a>
                                                 
+                                                    <a title="Gerar Receita" href="{% url 'medical_query:recipe' object.id %}">
+                                                        <button type="button" class="btn btn-success btn-sm" style="border-radius: 3px;">
+                                                            <i class="fa fa-file-pdf-o" aria-hidden="true"></i>
+                                                        </button>
+                                                    </a>
+
+
+                                                    <a title="Gerar Requisição de Exames" href="{% url 'medical_query:exam_request_pdf' object.id %}">
+                                                        <button type="button" class="btn btn-warning btn-sm" style="border-radius: 3px;">
+                                                            <i class="fa fa-file-pdf-o" aria-hidden="true"></i>
+                                                        </button>
+                                                    </a>
+
+
+
+
                                                 </td>
                                             </tr>
                                         {% endif %}
