--- a/ubs/core/templates/core/menu_tecnical.html
+++ b/ubs/core/templates/core/menu_tecnical.html
@@ -1,39 +1,68 @@
 <div id="main-menu" class="main-menu collapse navbar-collapse">
     <ul class="nav navbar-nav">
-        <li class="active">
-            <a href=""> <i class="menu-icon fa fa-dashboard"></i>Dashboard </a>
+
+
+
+        <h3 class="menu-title text-center">UBS-Em Saúde<del></del></h3><!-- /.menu-title -->
+        <li class="menu-item-has-children dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 
+                <i
+                    class="menu-icon fa fa-user-circle"></i>Usuários</a>
+            <ul class="sub-menu children dropdown-menu">
+                <li><i class="fa fa-user-md"></i><a href="{% url 'accounts:list_all_doctor' %}"> Médicos</a></li>
+                <li><i class="fa fa-user-o"></i><a href="{% url 'accounts:list_all_clerk' %}"> Técnicos</a></li>
+
+            </ul>
         </li>
 
-
-        <h3 class="menu-title">Usuário do Sistema</h3><!-- /.menu-title -->
         <li class="menu-item-has-children dropdown">
-            <a href=" {% url 'accounts:list_cards_users' %}" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
-                <i class="fa fa-user-circle" aria-hidden="true"></i> Usuários
-            </a>
-        </li>
-
-
-        <h3 class="menu-title">Pacientes Cadastrados</h3><!-- /.menu-title -->
-        <li class="menu-item-has-children dropdown">
-            <a href=" {% url 'patient:list_patient' %}" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> 
-                <i class="fa fa-address-card" aria-hidden="true"></i> Pacientes Cadastrados
-            </a>
-        </li>
-
-        <h3 class="menu-title">Encaminhamentos</h3><!-- /.menu-title -->
-        <li class="menu-item-has-children dropdown">
-            <a href="{% url 'medical_query:forwarding_create' %}" class="dropdown-toggle" data-toggle="" aria-haspopup="true"
-                aria-expanded="false">
-                <i class="fa fa-plus" aria-hidden="true"></i>  Novo 
-            </a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
+                    class="menu-icon fa fa-address-card"></i>Pacientes</a>
+            <ul class="sub-menu children dropdown-menu">
+                <li><i class="fa fa-plus"></i><a href="{% url 'accounts:list_all_clerk' %}">Adicionar Paciente</a></li>
+                <li><i class="fa fa-list-alt"></i><a href="{% url 'accounts:list_all_clerk' %}">Ver Pacientes</a></li>
+        
+            </ul>
         </li>
 
 
         <li class="menu-item-has-children dropdown">
-            <a href="{% url 'medical_query:currents_forwarding' %}" class="dropdown-toggle" data-toggle="" aria-haspopup="true"
-                aria-expanded="false">
-                <i class="fa fa-list-alt" aria-hidden="true"></i>  Realizados
-            </a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
+                    class="menu-icon fa fa-share"></i>Encaminhamentos</a>
+            <ul class="sub-menu children dropdown-menu">
+                <li><i class="fa fa-plus"></i><a href="{% url 'accounts:list_all_clerk' %}">Novo Encaminhamento</a></li>
+                <li><i class="fa fa-th-large"></i><a href="{% url 'accounts:list_all_clerk' %}">Fila de Atendimentos</a></li>
+                <li><i class="fa fa-list-alt"></i><a href="{% url 'accounts:list_all_clerk' %}">Ver Todos Realizados</a></li>
+        
+            </ul>
+        </li>
+        
+        <li class="menu-item-has-children dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
+                    class="menu-icon fa fa-exclamation-triangle"></i>CID10</a>
+            <ul class="sub-menu children dropdown-menu">
+                <li><i class="fa fa-plus"></i><a href="{% url 'accounts:list_all_clerk' %}">Novo CID10</a></li>
+                <li><i class="fa fa-list-alt"></i><a href="{% url 'accounts:list_all_clerk' %}">Ver CIDs10</a></li>        
+            </ul>
+        </li>
+
+
+        <li class="menu-item-has-children dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
+                    class="menu-icon fa fa-medkit"></i>Medicamentos</a>
+            <ul class="sub-menu children dropdown-menu">
+                <li><i class="fa fa-plus"></i><a href="{% url 'accounts:list_all_clerk' %}">Novo Medicamento</a></li>
+                <li><i class="fa fa-list-alt"></i><a href="{% url 'accounts:list_all_clerk' %}">Ver Medicamentos</a></li>
+            </ul>
+        </li>
+
+        <li class="menu-item-has-children dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
+                    class="menu-icon fa fa-stethoscope"></i>Exames</a>
+            <ul class="sub-menu children dropdown-menu">
+                <li><i class="fa fa-plus"></i><a href="{% url 'accounts:list_all_clerk' %}">Novo Exame</a></li>
+                <li><i class="fa fa-list-alt"></i><a href="{% url 'accounts:list_all_clerk' %}">Ver Exames</a></li>
+            </ul>
         </li>
 
 
