--- a/ubs/core/templates/core/menu_tecnical.html
+++ b/ubs/core/templates/core/menu_tecnical.html
@@ -19,8 +19,8 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
                     class="menu-icon fa fa-address-card"></i>Pacientes</a>
             <ul class="sub-menu children dropdown-menu">
-                <li><i class="fa fa-plus"></i><a href="{% url 'accounts:list_all_clerk' %}">Adicionar Paciente</a></li>
-                <li><i class="fa fa-list-alt"></i><a href="{% url 'accounts:list_all_clerk' %}">Ver Pacientes</a></li>
+                <li><i class="fa fa-plus"></i><a href="{% url 'patient:add_patient' %}">Adicionar Paciente</a></li>
+                <li><i class="fa fa-list-alt"></i><a href="{% url 'patient:list_patient' %}">Ver Pacientes</a></li>
         
             </ul>
         </li>
@@ -30,9 +30,9 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
                     class="menu-icon fa fa-share"></i>Encaminhamentos</a>
             <ul class="sub-menu children dropdown-menu">
-                <li><i class="fa fa-plus"></i><a href="{% url 'accounts:list_all_clerk' %}">Novo Encaminhamento</a></li>
-                <li><i class="fa fa-th-large"></i><a href="{% url 'accounts:list_all_clerk' %}">Fila de Atendimentos</a></li>
-                <li><i class="fa fa-list-alt"></i><a href="{% url 'accounts:list_all_clerk' %}">Ver Todos Realizados</a></li>
+                <li><i class="fa fa-plus"></i><a href="{% url 'medical_query:forwarding_create' %}">Novo Encaminhamento</a></li>
+                <li><i class="fa fa-th-large"></i><a href="{% url 'medical_query:currents_forwarding' %}">Fila de Atendimentos</a></li>
+                <li><i class="fa fa-list-alt"></i><a href="{% url 'medical_query:all_forwarding' %}">Ver Todos Realizados</a></li>
         
             </ul>
         </li>
