--- a/ubs/patient/templates/patient/add.html
+++ b/ubs/patient/templates/patient/add.html
@@ -15,7 +15,7 @@
 
 <div class="content col-md-12">
     <div class="animated fadeIn">
-        <div enctype="multipart/form-data" method="post">
+        <form enctype="multipart/form-data" method="post">
             {% csrf_token %}
                 <div class="row">
                     <div class="col-md-10" style="margin: 20px auto;">
@@ -88,7 +88,6 @@
 
                         </div>
                     </div>
-                </div>
             </div>
         </form>
     </div>
