links no menu do tecnico

--- a/ubs/core/templates/core/menu_tecnical.html
+++ b/ubs/core/templates/core/menu_tecnical.html
@@ -41,8 +41,8 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
                     class="menu-icon fa fa-exclamation-triangle"></i>CID10</a>
             <ul class="sub-menu children dropdown-menu">
-                <li><i class="fa fa-plus"></i><a href="{% url 'accounts:list_all_clerk' %}">Novo CID10</a></li>
-                <li><i class="fa fa-list-alt"></i><a href="{% url 'accounts:list_all_clerk' %}">Ver CIDs10</a></li>        
+                <li><i class="fa fa-plus"></i><a href="{% url 'medical_query:add_CID' %}">Novo CID10</a></li>
+                <li><i class="fa fa-list-alt"></i><a href="{% url 'medical_query:list_CID' %}">Ver CIDs10</a></li>       
             </ul>
         </li>
 
@@ -51,8 +51,8 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
                     class="menu-icon fa fa-medkit"></i>Medicamentos</a>
             <ul class="sub-menu children dropdown-menu">
-                <li><i class="fa fa-plus"></i><a href="{% url 'accounts:list_all_clerk' %}">Novo Medicamento</a></li>
-                <li><i class="fa fa-list-alt"></i><a href="{% url 'accounts:list_all_clerk' %}">Ver Medicamentos</a></li>
+                <li><i class="fa fa-plus"></i><a href="{% url 'medical_query:add_medicine' %}">Novo Medicamento</a></li>
+                <li><i class="fa fa-list-alt"></i><a href="{% url 'medical_query:list_medicine' %}">Ver Medicamentos</a></li>
             </ul>
         </li>
 
@@ -60,8 +60,8 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
                     class="menu-icon fa fa-stethoscope"></i>Exames</a>
             <ul class="sub-menu children dropdown-menu">
-                <li><i class="fa fa-plus"></i><a href="{% url 'accounts:list_all_clerk' %}">Novo Exame</a></li>
-                <li><i class="fa fa-list-alt"></i><a href="{% url 'accounts:list_all_clerk' %}">Ver Exames</a></li>
+                <li><i class="fa fa-plus"></i><a href="{% url 'medical_query:add_exam_request' %}">Novo Exame</a></li>
+                <li><i class="fa fa-list-alt"></i><a href="{% url 'medical_query:list_exam_request' %}">Ver Exames</a></li>
             </ul>
         </li>
 
