--- a/ubs/core/templates/core/menu_medical.html
+++ b/ubs/core/templates/core/menu_medical.html
@@ -1,32 +1,49 @@
 <div id="main-menu" class="main-menu collapse navbar-collapse">
     <ul class="nav navbar-nav">
-        <li class="active">
-            <a href=""> <i class="menu-icon fa fa-dashboard"></i>Dashboard </a>
+
+        <h3 class="menu-title text-center">UBS-Em Saúde<del></del></h3>
+        
+        <li class="menu-item-has-children dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
+                    class="menu-icon fa fa-list-alt"></i>Consultas</a>
+            <ul class="sub-menu children dropdown-menu">
+                <li><i class="fa fa-list-alt"></i><a href="{% url 'medical_query:list_query_history' %}">Consultas
+                        Realizadas</a></li>
+                <li><i class="fa fa-th-large"></i><a href="{% url 'medical_query:await_querys' %}">Fila de
+                        Atendimentos</a></li>
+
+
+            </ul>
         </li>
-
-
-        <h3 class="menu-title">Consultas</h3><!-- /.menu-title -->
 
         <li class="menu-item-has-children dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
-                    class="menu-icon fa fa-tasks"></i>Consultas Realizadas</a>
+                    class="menu-icon fa fa-exclamation-triangle"></i>CID10</a>
             <ul class="sub-menu children dropdown-menu">
-                <li><i class="fa fa-user-md"></i><a href="{% url 'medical_query:list_query_history' %}">Listar</a></li>
-
+                <li><i class="fa fa-plus"></i><a href="{% url 'medical_query:add_CID' %}">Novo CID10</a></li>
+                <li><i class="fa fa-list-alt"></i><a href="{% url 'medical_query:list_CID' %}">Ver CIDs10</a></li>
             </ul>
-
         </li>
 
-        <h3 class="menu-title">Atendimentos</h3><!-- /.menu-title -->
-        <li class="menu-item-has-children dropdown" >
-            <a href="{% url 'medical_query:await_querys' %}" class="dropdown-toggle" data-toggle="" aria-haspopup="true" aria-expanded="false">
-                <i class="menu-icon fa fa-tasks"></i>
-                Atendimentos do dia
-            </a>
-            <a href="{% url 'medical_query:await_querys' %}" class="dropdown-toggle" data-toggle="" aria-haspopup="true" aria-expanded="false">
-                <i class="menu-icon fa fa-tasks"></i>
-                Listar atendimentos
-            </a>
+
+        <li class="menu-item-has-children dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
+                    class="menu-icon fa fa-medkit"></i>Medicamentos</a>
+            <ul class="sub-menu children dropdown-menu">
+                <li><i class="fa fa-plus"></i><a href="{% url 'medical_query:add_medicine' %}">Novo Medicamento</a></li>
+                <li><i class="fa fa-list-alt"></i><a href="{% url 'medical_query:list_medicine' %}">Ver Medicamentos</a>
+                </li>
+            </ul>
+        </li>
+
+        <li class="menu-item-has-children dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
+                    class="menu-icon fa fa-stethoscope"></i>Exames</a>
+            <ul class="sub-menu children dropdown-menu">
+                <li><i class="fa fa-plus"></i><a href="{% url 'medical_query:add_exam_request' %}">Novo Exame</a></li>
+                <li><i class="fa fa-list-alt"></i><a href="{% url 'medical_query:list_exam_request' %}">Ver Exames</a>
+                </li>
+            </ul>
         </li>
 
 
